@@ -4,6 +4,6 @@ use warnings;
 use SPVM::Builder::Config;
 my $config = SPVM::Builder::Config->new_c99;
 
-$config->add_sources('utf8proc.c');
+$config->add_source_files('utf8proc.c');
 
 $config;
