@@ -7,6 +7,6 @@ my $config = SPVM::Builder::Config->new_c99;
 
 $config->optimize('-O2');
 $config->force(1);
-$config->add_sources('foo.c', 'bar.c', 'baz/baz.c');
+$config->add_source_files('foo.c', 'bar.c', 'baz/baz.c');
 
 $config;
