@@ -8,11 +8,11 @@ my $bconf = SPVM::Builder::Config->new_c99;
 $bconf->optimize('-O2');
 $bconf->force(1);
 
-my @sources = qw(
+my @source_files = qw(
   foo.c
   bar.c
   baz/baz.c
 );
-$bconf->add_sources(@sources);
+$bconf->add_source_files(@source_files);
 
 $bconf;
