@@ -5,6 +5,9 @@ Revision history for SPVM
         * Add "use" method to SPVM::Builder::Config. This method is the alias for "add_resources".
         * Remove "ext" field of SPVM::Builder::Config because source files was needed to be specifed.
         * Need Test::More 0.92+ to do tests.
+        * Rename sources field of SPVM::Builder::Config to source_files.
+        * Rename add_sources method of SPVM::Builder::Config to add_source_files.
+        
 0.9112  2021-01-07
         [BUGS]
         * Fix a unweaken memory leak bug.
